# signal-trck

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
docs/: architecture.md
docs/solutions/integration-issues/: pydantic-schema-version-pre-validation.md
plans/: feat-crypto-charting-ai-analysis.md  feat-phase-b-web-ui-fastapi.md
src/signal_trck/: __init__.py  chart_io.py  config.py  log.py  pair_id.py  paths.py
src/signal_trck/adapters/: __init__.py  _rate_limit.py  base.py  coinbase.py
src/signal_trck/api/: __init__.py  app.py  errors.py  routes.py
src/signal_trck/chart_schema/: __init__.py  models.py
src/signal_trck/cli/: __init__.py  _runner.py  ai.py  dev.py  fetch.py  indicators.py  levels.py  main.py  pair.py  serve.py
src/signal_trck/indicators/: __init__.py  cache.py  engine.py  params.py
src/signal_trck/levels/: __init__.py  swing_cluster.py  types.py
src/signal_trck/llm/: __init__.py  analysis.py  client.py  pipeline.py  prompts.py
src/signal_trck/storage/: __init__.py  models.py  schema.py  store.py
tests/: conftest.py  test_ai_pipeline.py  test_ai_run_storage.py  test_chart_io.py  test_chart_schema.py  test_chart_storage.py  test_cli.py  test_coinbase_adapter.py  test_indicator_cache.py  test_indicators.py  test_levels.py  test_llm_analysis.py  test_pair_id.py  test_params_hash.py  test_rate_limit.py  test_storage.py  test_storage_concurrency.py
tests/api/: conftest.py  test_api_key_redaction.py  test_drawings_round_trip.py  test_routes.py
todos/: 001-complete-p1-async-sync-seam.md  002-complete-p1-cli-ai-double-store-open.md  003-complete-p1-compute-or-load-redundant-scan.md  004-complete-p2-indicator-cache-sql-into-store.md  005-complete-p2-typed-ai-run-row.md  006-complete-p2-type-llm-client-fields.md  007-complete-p2-fragile-fully-cached-check.md  008-complete-p2-concurrent-writes-test.md  009-complete-p2-cli-test-for-ai-analyze.md  010-pending-p3-cleanup-and-naming-polish.md  011-pending-p3-rerun-pending-reviewers.md
web/: .gitignore  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api-types.ts  api.ts  main.tsx  store.ts  styles.css
web/src/chart/: ChartView.tsx  format.ts
web/src/drawings/: DrawingLayer.tsx  primitives.ts  serialize.test.ts  serialize.ts  styles.ts
web/src/views/: PairList.tsx  PairView.tsx  SchemaMismatchModal.tsx
