[project]
name = "signal-trck"
version = "0.1.0"
description = "Personal crypto charting + LLM-grounded technical analysis"
authors = [{ name = "Hugues Lagrange" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "aiosqlite>=0.20",
    "anthropic>=0.40",
    "httpx>=0.27",
    "instructor>=1.6",
    "numpy>=2.0",
    "openai>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "scikit-learn>=1.5",
    "structlog>=24.0",
    "ta-lib>=0.6.5",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-recording>=0.13",
    "ruff>=0.8",
]

[project.scripts]
signal-trck = "signal_trck.cli.main:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "W"]

[tool.ruff.lint.per-file-ignores]
# Typer's standard idiom uses `typer.Option(...)` as default values for CLI
# command parameters. B008 flags this; the lint is wrong here.
"src/signal_trck/cli/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
